// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders correctly 1`] = `
<div>
  <div
    class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3 sm:px-6"
  >
    <div
      class="hidden sm:flex sm:flex-1 sm:items-center sm:justify-between"
    >
      <div>
        <p
          class="text-sm text-gray-700"
        >
          Showing 
          <span
            class="font-medium"
          >
            13
          </span>
           to 
          <span
            class="font-medium"
          >
            24
          </span>
           of
           
          <span
            class="font-medium"
          >
            83
          </span>
           results
        </p>
      </div>
      <div>
        <nav
          aria-label="Pagination"
          class="isolate inline-flex -space-x-px rounded-md shadow-sm"
        >
          <a
            class="relative inline-flex items-center rounded-l-md border border-gray-300 bg-white px-2 py-2 text-sm font-medium text-gray-500 hover:bg-gray-50 focus:z-20"
            href="/repositories/0"
          >
            ← Previous
          </a>
          <a
            aria-current="page"
            class="relative inline-flex items-center border px-4 py-2 text-sm font-medium focus:z-20 bg-white text-gray-500 border-gray-300"
            href="/repositories/0"
          >
            0
          </a>
          <a
            aria-current="page"
            class="relative inline-flex items-center border px-4 py-2 text-sm font-medium focus:z-20 bg-indigo-50 text-indigo-600 border-indigo-500"
            href="/repositories/1"
          >
            1
          </a>
          <a
            aria-current="page"
            class="relative inline-flex items-center border px-4 py-2 text-sm font-medium focus:z-20 bg-white text-gray-500 border-gray-300"
            href="/repositories/2"
          >
            2
          </a>
          <span
            class="relative inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700"
          >
            ...
          </span>
          <a
            aria-current="page"
            class="relative inline-flex items-center border px-4 py-2 text-sm font-medium focus:z-20 bg-white text-gray-500 border-gray-300"
            href="/repositories/81"
          >
            81
          </a>
          <a
            aria-current="page"
            class="relative inline-flex items-center border px-4 py-2 text-sm font-medium focus:z-20 bg-white text-gray-500 border-gray-300"
            href="/repositories/82"
          >
            82
          </a>
          <a
            aria-current="page"
            class="relative inline-flex items-center border px-4 py-2 text-sm font-medium focus:z-20 bg-white text-gray-500 border-gray-300"
            href="/repositories/83"
          >
            83
          </a>
          <a
            class="relative inline-flex items-center rounded-r-md border border-gray-300 bg-white px-2 py-2 text-sm font-medium text-gray-500 hover:bg-gray-50 focus:z-20"
            href="/repositories/2"
          >
            Next →
          </a>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination renders correctly with no results 1`] = `
<div>
  <div
    class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3 sm:px-6"
  >
    <div
      class="hidden sm:flex sm:flex-1 sm:items-center sm:justify-between"
    >
      <div>
        <p
          class="text-sm text-gray-700"
        >
          Showing 
          <span
            class="font-medium"
          >
            1
          </span>
           to 
          <span
            class="font-medium"
          >
            12
          </span>
           of
           
          <span
            class="font-medium"
          >
            0
          </span>
           results
        </p>
      </div>
      <div>
        <nav
          aria-label="Pagination"
          class="isolate inline-flex -space-x-px rounded-md shadow-sm"
        >
          <span
            class="relative inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700"
          >
            ...
          </span>
          <a
            aria-current="page"
            class="relative inline-flex items-center border px-4 py-2 text-sm font-medium focus:z-20 bg-white text-gray-500 border-gray-300"
            href="/repositories/-2"
          >
            -2
          </a>
          <a
            aria-current="page"
            class="relative inline-flex items-center border px-4 py-2 text-sm font-medium focus:z-20 bg-white text-gray-500 border-gray-300"
            href="/repositories/-1"
          >
            -1
          </a>
          <a
            aria-current="page"
            class="relative inline-flex items-center border px-4 py-2 text-sm font-medium focus:z-20 bg-indigo-50 text-indigo-600 border-indigo-500"
            href="/repositories/0"
          >
            0
          </a>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
